tests/semantic_cases/invalid/eof_with_arg.ob0
MODULE Main;
VAR x;
BEGIN
  x := EOF(1)
END Main.
